--- a/templates/layout.html
+++ b/templates/layout.html
@@ -19,6 +19,7 @@
     <script src="{{url_for('static',filename='js/d3.min.js')}}"></script>
     <script src="{{url_for('static',filename='js/echarts.min.js')}}"></script>
     <script src="{{url_for('static',filename='js/dark.js')}}"></script>
+    <!--script src="{{url_for('static',filename='js/countUp.js')}}"></script-->
     <!--script src="{{url_for('static',filename='js/echarts2/echarts.js')}}"></script-->
     <style>
     .magictime {
@@ -120,7 +121,7 @@
     .plot-title {
         padding: 5px 10px;
         font-size: 13px;
-        background-color: #3c8376;
+        background-color: #535d63;
         z-index: 999;
         color: #f2f2f2;
         width: 100%;
