--- a/templates/layout.html
+++ b/templates/layout.html
@@ -168,7 +168,8 @@
                 <div class="icon-list">
                     <a href="{{url_for('index')}}" id="nav1"><i class="fa fa-fw fa-paper-plane"></i><span>平台概览</span></a>
                     <a href="{{url_for('user')}}" id="nav2"><i class="fa fa-fw fa-star"></i><span>个人中心</span></a>
-                    <a href="{{url_for('invest')}}" id="nav3"><i class="fa fa-fw fa-bar-chart-o"></i><span>投资顾问</span></a> {% if auth['is_auth'] %}
+                    <a href="{{url_for('invest')}}" id="nav3"><i class="fa fa-fw fa-bar-chart-o"></i><span>投资顾问</span></a>
+                    <a href="{{url_for('chat')}}" id="nav4"><i class="fa fa-fw fa-comment"></i><span>拍粉社区</span></a> {% if auth['is_auth'] %}
                     <div style="text-align:center;margin:30px 0;">
                         <a href="{{url_for('user')}}" style="padding-left:0;padding-right:0;">
                             <div style="text-align:center;">
