--- a/templates/layout.html
+++ b/templates/layout.html
@@ -203,7 +203,8 @@
                     </div>
                 </div>
                 <div id="footer">
-                    <p>Copyright <span class="fa fa-fw fa-copyright"></span> 上海交通大学 DI
+                    <!-- <p>Copyright <span class="fa fa-fw fa-copyright"></span> 上海交通大学 DI -->
+                    <p>Copyright <span class="fa fa-fw fa-copyright"></span> 第二届拍拍贷魔镜杯
                         <br/> <span style="font-size:13px;">数据应用大赛</span></p>
                 </div>
             </div>
