--- a/templates/layout.html
+++ b/templates/layout.html
@@ -178,6 +178,7 @@
                     <a href="{{url_for('chat')}}" id="nav4"><i class="fa fa-fw fa-comment"></i><span>拍粉社区</span></a>
                     <a href="{{url_for('logout')}}"><i class="fa fa-fw fa-logout"></i><span>注销授权</span></a>
                     <div style="text-align:center;margin:30px 0;">
+                        <img src="avatar.png" alt="" style="width:60px;margin:0 auto;margin-bottom:20px;">
                         <p style="margin-bottom:25px;"><span style="color:#fff;margin:0;margin-right:12px;">{{ auth['Username'] }}</span>您好</p>
                         <p style="font-size:13px;margin-bottom:6px;"><span style="font-size:27px;color:#d94e5d;margin:0;margin-right:10px;">{{ auth['count'] }}</span></p>
                         <p style="color:#888;font-size:13px;">授权登陆用户总数</p>
