--- a/templates/layout.html
+++ b/templates/layout.html
@@ -176,7 +176,7 @@
                     <a href="{{url_for('user')}}" id="nav2"><i class="fa fa-fw fa-star"></i><span>个人中心</span></a>
                     <a href="{{url_for('invest')}}" id="nav3"><i class="fa fa-fw fa-bar-chart-o"></i><span>投资顾问</span></a>
                     <a href="{{url_for('chat')}}" id="nav4"><i class="fa fa-fw fa-comment"></i><span>拍粉社区</span></a>
-                    <a href="{{url_for('logout')}}"><i class="fa fa-fw fa-logout"></i><span>注销授权</span></a>
+                    <a href="{{url_for('logout')}}"><i class="fa fa-fw fa-sign-out"></i><span>注销授权</span></a>
                     <div style="text-align:center;margin:30px 0;">
                         <img src="avatar.png" alt="" style="width:60px;margin:0 auto;margin-bottom:20px;">
                         <p style="margin-bottom:25px;"><span style="color:#fff;margin:0;margin-right:12px;">{{ auth['Username'] }}</span>您好</p>
