--- a/templates/layout.html
+++ b/templates/layout.html
@@ -85,6 +85,8 @@
     .menu-button {
         width: 2.25em;
         height: 2em;
+        background-image: url("{{url_for('static', filename='img/avatar.png')}}");
+        border-radius: 50%;
     }
     
     #footer {
@@ -162,7 +164,6 @@
     .anchorBL {
         display: none;
     }
-
     </style>
     {% block style %} {% endblock %}
 </head>
@@ -178,7 +179,7 @@
                     <a href="{{url_for('chat')}}" id="nav4"><i class="fa fa-fw fa-comment"></i><span>拍粉社区</span></a>
                     <a href="{{url_for('logout')}}"><i class="fa fa-fw fa-sign-out"></i><span>注销授权</span></a>
                     <div style="text-align:center;margin:30px 0;">
-                        <img src="avatar.png" alt="" style="width:60px;margin:0 auto;margin-bottom:20px;">
+                        <img src="{{url_for('static', filename='img/avatar.png')}}" alt="" style="width:60px;margin:0 auto;margin-bottom:20px;">
                         <p style="margin-bottom:25px;"><span style="color:#fff;margin:0;margin-right:12px;">{{ auth['Username'] }}</span>您好</p>
                         <p style="font-size:13px;margin-bottom:6px;"><span style="font-size:27px;color:#d94e5d;margin:0;margin-right:10px;">{{ auth['count'] }}</span></p>
                         <p style="color:#888;font-size:13px;">授权登陆用户总数</p>
@@ -192,9 +193,7 @@
                     <h1>魔镜杯</h1>
                     <p>拍知心</p>
                     {% if auth['is_auth'] %}
-                    <button class="menu-button" id="open-button">
-                        <img src="{{url_for('static', filename='img/avatar.png')}}" alt="" style="width:40px;border-radius:50%;position:relative;top:-10px;">
-                    </button>
+                    <button class="menu-button" id="open-button"></button>
                     {% else %}
                     <a href="https://ac.ppdai.com/oauth2/login?AppID=2fb2e79ec7914ed99065d5cea99f95e0&ReturnUrl=http://zhanghonglun.cn/pdi/auth" id="nav_auth">授权登陆</a>
                     {% endif %}
