--- a/templates/layout.html
+++ b/templates/layout.html
@@ -62,6 +62,13 @@
         margin-top: 0;
         margin-bottom: 0;
     }
+
+    .menu-button {
+        width: 40px;
+        height: 40px;
+        background-image: url("{{url_for('static', filename='img/avatar.png')}}") !important;
+        border-radius: 50%;
+    }
     
     .menu-wrap {
         width: 220px;
@@ -172,7 +179,7 @@
                     <a href="{{url_for('chat')}}" id="nav4"><i class="fa fa-fw fa-comment"></i><span>拍粉社区</span></a>
                     <a href="{{url_for('logout')}}"><i class="fa fa-fw fa-sign-out"></i><span>注销授权</span></a>
                     <div style="text-align:center;margin:30px 0;">
-                        <img src="{{url_for('static', filename='img/avatar.png')}}" alt="" style="width:40px;margin:0 auto;margin-bottom:20px;">
+                        <img src="{{url_for('static', filename='img/avatar.png')}}" alt="" style="width:40px;margin:0 auto;margin-bottom:20px;border-radius:50%;">
                         <p style="margin-bottom:25px;"><span style="color:#fff;margin:0;margin-right:12px;">{{ auth['Username'] }}</span>您好</p>
                         <p style="font-size:13px;margin-bottom:6px;"><span style="font-size:27px;color:#d94e5d;margin:0;margin-right:10px;">{{ auth['count'] }}</span></p>
                         <p style="color:#888;font-size:13px;">授权登陆用户总数</p>
