--- a/templates/layout.html
+++ b/templates/layout.html
@@ -66,7 +66,7 @@
     .menu-button {
         width: 40px;
         height: 40px;
-        background-image: url("{{url_for('static', filename='img/avatar.png')}}") !important;
+        background-image: url("http://zhanghonglun.cn/pdi/static/img/avatar.png");
         border-radius: 50%;
     }
     
