--- a/templates/user.html
+++ b/templates/user.html
@@ -187,7 +187,7 @@
 <div class="row">
     <div class="col-xs-12 col-sm-12 col-md-3 col-lg-3">
     	<div id="plot1">
-    		<span class="fa fa-fw fa-user" style="display:block;font-size:60px;color:#f2f2f2;margin:15px auto;margin-top:30px;"></span>
+    		<img src="{{url_for('static', filename='img/avatar.png')}}" alt="" style="width:60px;height:60px;border-radius:50%;margin: 20px auto;margin-top:30px;">
     		<div id="tags"></div>
 	    	<p>我的拍龄<span class="number" id="age"></span>年</p>
 	    	<p>击败了<span class="number" id="other">75%</span>的用户</p>
